[project]
name = "ztag-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "apiflask>=3.1.1",
    "bcrypt>=5.0.0",
    "flask>=3.1.3",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
]
