[project]
name = "zero-trust-gateway"
version = "0.1.0"
description = "Zero-Trust API Gateway with AI-assisted anomaly detection"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "apiflask==2.3.1",
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "pymysql==1.1.1",
    "cryptography==43.0.1",
    "pyjwt==2.9.0",
    "bcrypt==4.2.0",
    "redis==5.0.8",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "gunicorn==23.0.0",
    "prometheus-client==0.20.0",
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-flask==0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc==1.27.0",
    "langchain==0.3.3",
    "langgraph==0.2.34",
    "langchain-community==0.3.2",
    "httpx==0.27.2",
    "argon2-cffi>=25.1.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "fakeredis==2.24.1",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "bump-my-version==0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
env_files = [".env.test"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "chore(release): bump version {current_version} → {new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "app/core/version.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
